--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -895,6 +895,8 @@
   "boilerplate.containers.Payroll.arName": "الاسم بالعربية",
   "boilerplate.containers.Payroll.enName": "الاسم بالانجليزية",
   "boilerplate.containers.Payroll.element": "العنصر",
+  "boilerplate.containers.Payroll.preview": "عرض",
+  
   
   
   
@@ -1021,6 +1023,8 @@
   "boilerplate.containers.Payroll.Attendance.shortName":"الاسم المختصر", 
   "boilerplate.containers.Payroll.Attendance.PermissionCreateTitle":"اضافة اكواد الاذون", 
   "boilerplate.containers.Payroll.Attendance.PermissionUpdateTitle":"تعديل اكواد الاذون", 
+  "boilerplate.containers.Payroll.Attendance.isNotUpdate":"فى حالة وجود اذن للموظف لا تقم بالتعديل", 
+  
   
   
   
