--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -835,7 +835,8 @@
   "boilerplate.components.tables.codes.newEmployeeName": "New Manger",
   "boilerplate.components.tables.codes.job": "Job",
   "boilerplate.components.tables.codes.categoryName": "Category",
-  "boilerplate.components.tables.codes.price": "Price",
+  "boilerplate.components.tables.codes.price": "Price",  
+  "boilerplate.components.tables.codes.transportaion": "Transportaion",
 
 
 
@@ -1003,9 +1004,15 @@
   
   "boilerplate.containers.Payroll.Attendance.PermissionCreateTitle":"Add Permission Codes", 
   "boilerplate.containers.Payroll.Attendance.PermissionUpdateTitle":"Update Permission Codes",    
-  "boilerplate.containers.Payroll.Attendance.isNotUpdate":"Not Update Existing Permessions", 
-  
-  
+  "boilerplate.containers.Payroll.Attendance.isNotUpdate":"Not Update Existing Permessions",  
+  "boilerplate.containers.Payroll.Attendance.missionName":"Mission Type", 
+  "boilerplate.containers.Payroll.Attendance.isOverTime":"Is OverTime", 
+  "boilerplate.containers.Payroll.Attendance.isMustAttend":"Is must Attend", 
+  "boilerplate.containers.Payroll.Attendance.MissionTrxCreateTitle":"Add Mission", 
+  "boilerplate.containers.Payroll.Attendance.MissioTrxUpdateTitle":"Update Mission",  
+  "boilerplate.containers.Payroll.Attendance.missionDestination":"Mission Destination", 
+  "boilerplate.containers.Payroll.Attendance.transportationExpenses":"Transportation",   
+  "boilerplate.containers.Payroll.Attendance.isNotUpdateMission":"Not Update Existing Mission",
   
 
   "boilerplate.containers.Payroll.Employee.personal.employeeCode":"Employee Code",
