finish vacations types page , official vacations page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1161,6 +1161,43 @@
   "boilerplate.containers.Payroll.Request.Transaction.PermissionReason": "سبب الإذن",
   "boilerplate.containers.Payroll.Request.Transaction.AccessToTimeInOUT": "الوصول إلى وقت الداخل / الخارج",
   "boilerplate.containers.Payroll.Request.Transaction.checkIn": "عدم تسجيل بصمة حضور",
-  "boilerplate.containers.Payroll.Request.Transaction.checkOut": "عدم تسجيل بصمة انصراف"
+  "boilerplate.containers.Payroll.Request.Transaction.checkOut": "عدم تسجيل بصمة انصراف",
+
+  "boilerplate.containers.Payroll.vac.code.date": "التاريخ",
+  "boilerplate.containers.Payroll.vac.code.actions": "الإجراءات",
+  "boilerplate.containers.Payroll.vac.code.OfficialVacations": "الاجازات الرسمية",
+  "boilerplate.containers.Payroll.vac.code.EditOfficialVacation": "تعديل الإجازة الرسمية",
+  "boilerplate.containers.Payroll.vac.code.CreateOfficialVacation": "اضافة إجازة رسمية",
+  "boilerplate.containers.Payroll.vac.code.vacationDescriptionEN": "وصف الإجازة بالانجليزية",
+  "boilerplate.containers.Payroll.vac.code.vacationDescriptionAr": "وصف الإجازة بالعربية",
+  "boilerplate.containers.Payroll.vac.code.Elements": "النماذج",
+  "boilerplate.containers.Payroll.vac.code.enName": "الاسم بالانجليزية",
+  "boilerplate.containers.Payroll.vac.code.arName": "الاسم بالعربية",
+  "boilerplate.containers.Payroll.vac.code.deducted": "اجازة بالخصم",
+  "boilerplate.containers.Payroll.vac.code.hasBalance": "لديه رصيد",
+  "boilerplate.containers.Payroll.vac.code.isYearBalance": "خصم الإجازة السنوية",
+  "boilerplate.containers.Payroll.vac.code.shortcut": "الاختصار",
+  "boilerplate.containers.Payroll.vac.code.halfDay": "نصف يوم",
+  "boilerplate.containers.Payroll.vac.code.vacationsTypes": "أنواع الإجازات",
+  "boilerplate.containers.Payroll.vac.code.CreateVacationType": "اضافة نوع الإجازة",
+  "boilerplate.containers.Payroll.vac.code.EditVacationType": "تعديل نوع الإجازة",
+  "boilerplate.containers.Payroll.vac.code.vacationName": "اسم الاجازة",
+  "boilerplate.containers.Payroll.vac.code.element": "العنصر",
+  "boilerplate.containers.Payroll.vac.code.DayValue": "القيمه المقابلة لليوم",
+  "boilerplate.containers.Payroll.vac.code.SalaryDeduction": "تخصم من المرتب",
+  "boilerplate.containers.Payroll.vac.code.Maximum": "بحد اقصى",
+  "boilerplate.containers.Payroll.vac.code.AnnualVacationDeduction": "تخصم من الإجازة السنوية",
+  "boilerplate.containers.Payroll.vac.code.HalfDay": "نصف يوم",
+  "boilerplate.containers.Payroll.vac.code.GovernmentSickVacation": "اجازة مرضى حكومى",
+  "boilerplate.containers.Payroll.vac.code.HasBalance": "له رصيد",
+  "boilerplate.containers.Payroll.vac.code.TransferToTheNextYear": "ترحل للعام التالى",
+  "boilerplate.containers.Payroll.vac.code.MaternityVacation": "اجازة وضع",
+  "boilerplate.containers.Payroll.vac.code.CalculatedAsAWorkingDay": "تحتسب بيوم عمل",
+  "boilerplate.containers.Payroll.vac.code.HideItForTheEmployee": "إخفائها للموظف",
+  "boilerplate.containers.Payroll.vac.code.DonotApplyOfficialHolidaysRules": "لا تطبق قواعد الإجازات الرسمية",
+  "boilerplate.containers.Payroll.vac.code.AffectsTheIncentiveCalculation": "تؤثر فى احتساب الحوافز",
+  "boilerplate.containers.Payroll.vac.code.DoesnotTakeAWeekOff": "لا يستقطع الاجازه الاسبوعيه",
+  "boilerplate.containers.Payroll.vac.code.AnnualInAdvance": "سنوى مقدم",
+  "boilerplate.containers.Payroll.vac.code.MustAttachFile": "يلزم ارفاق ملف"
   
 }
