--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1133,7 +1133,44 @@
   "boilerplate.containers.Payroll.Request.Transaction.PermissionReason": "Permission Reason",
   "boilerplate.containers.Payroll.Request.Transaction.AccessToTimeInOUT": "Access To Time In/OUT",
   "boilerplate.containers.Payroll.Request.Transaction.checkIn": "No check In",
-  "boilerplate.containers.Payroll.Request.Transaction.checkOut": "No Check Out"
+  "boilerplate.containers.Payroll.Request.Transaction.checkOut": "No Check Out",
+
+  "boilerplate.containers.Payroll.vac.code.date": "Date",
+  "boilerplate.containers.Payroll.vac.code.actions": "Actions",
+  "boilerplate.containers.Payroll.vac.code.OfficialVacations": "Official Vacations",
+  "boilerplate.containers.Payroll.vac.code.EditOfficialVacation": "Edit Official Vacation",
+  "boilerplate.containers.Payroll.vac.code.CreateOfficialVacation": "Create Official Vacation",
+  "boilerplate.containers.Payroll.vac.code.vacationDescriptionEN": "Vacation description EN",
+  "boilerplate.containers.Payroll.vac.code.vacationDescriptionAr": "Vacation description AR",
+  "boilerplate.containers.Payroll.vac.code.Elements": "Elements",
+  "boilerplate.containers.Payroll.vac.code.enName": "EN Name",
+  "boilerplate.containers.Payroll.vac.code.arName": "AR Name",
+  "boilerplate.containers.Payroll.vac.code.deducted": "Deducted",
+  "boilerplate.containers.Payroll.vac.code.hasBalance": "Has balance",
+  "boilerplate.containers.Payroll.vac.code.isYearBalance": "Annual vacation deduction",
+  "boilerplate.containers.Payroll.vac.code.shortcut": "Shortcut", 
+  "boilerplate.containers.Payroll.vac.code.halfDay": "Half day",
+  "boilerplate.containers.Payroll.vac.code.vacationsTypes": "Vacations Types",
+  "boilerplate.containers.Payroll.vac.code.CreateVacationType": "Create Vacation Type",
+  "boilerplate.containers.Payroll.vac.code.EditVacationType": "Edit Vacation Type",
+  "boilerplate.containers.Payroll.vac.code.vacationName": "Vacation name",
+  "boilerplate.containers.Payroll.vac.code.element": "Element",
+  "boilerplate.containers.Payroll.vac.code.DayValue": "Day value",
+  "boilerplate.containers.Payroll.vac.code.SalaryDeduction": "Salary deduction",
+  "boilerplate.containers.Payroll.vac.code.Maximum": "Maximum",
+  "boilerplate.containers.Payroll.vac.code.AnnualVacationDeduction": "Annual Vacation deduction",
+  "boilerplate.containers.Payroll.vac.code.HalfDay": "Half day",
+  "boilerplate.containers.Payroll.vac.code.GovernmentSickVacation": "Government sick Vacation",
+  "boilerplate.containers.Payroll.vac.code.HasBalance": "Has balance",
+  "boilerplate.containers.Payroll.vac.code.TransferToTheNextYear": "Transfer to the next year",
+  "boilerplate.containers.Payroll.vac.code.MaternityVacation": "Maternity Vacation",
+  "boilerplate.containers.Payroll.vac.code.CalculatedAsAWorkingDay": "Calculated as a working day",
+  "boilerplate.containers.Payroll.vac.code.HideItForTheEmployee": "Hide it for the employee",
+  "boilerplate.containers.Payroll.vac.code.DonotApplyOfficialHolidaysRules": "Don't apply  official holidays rules",
+  "boilerplate.containers.Payroll.vac.code.AffectsTheIncentiveCalculation": "Affects the incentive calculation",
+  "boilerplate.containers.Payroll.vac.code.DoesnotTakeAWeekOff": "Doesn't take the weekend off",
+  "boilerplate.containers.Payroll.vac.code.AnnualInAdvance": "Annual in advance",
+  "boilerplate.containers.Payroll.vac.code.MustAttachFile": "Must attach file"
   
    
    
