--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1172,8 +1172,15 @@
   "boilerplate.containers.Payroll.vac.code.AffectsTheIncentiveCalculation": "Affects the incentive calculation",
   "boilerplate.containers.Payroll.vac.code.DoesnotTakeAWeekOff": "Doesn't take the weekend off",
   "boilerplate.containers.Payroll.vac.code.AnnualInAdvance": "Annual in advance",
-  "boilerplate.containers.Payroll.vac.code.MustAttachFile": "Must attach file"
+  "boilerplate.containers.Payroll.vac.code.MustAttachFile": "Must attach file",
   
+  "boilerplate.containers.Payroll.vac.code.GovernmentSickLeaveSetting": "Government sick leave setting",
+  "boilerplate.containers.Payroll.vac.code.VacationType": "Leave type",
+  "boilerplate.containers.Payroll.vac.code.Yearly": "Yearly",
+  "boilerplate.containers.Payroll.vac.code.Every3Years": "Every 3 years",
+  "boilerplate.containers.Payroll.vac.code.DaysNumber": "Days number",
+  "boilerplate.containers.Payroll.vac.code.CountValueDay": "Count/Value(Day)",
+  "boilerplate.containers.Payroll.vac.code.EmployeeDeduction": "Employee deduction"
    
    
 }
