--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -961,6 +961,33 @@
   "boilerplate.containers.Payroll.Employee.personal.jobname":"Job",
   "boilerplate.containers.Payroll.Employee.personal.isinsured":"Insured",
 
+  "boilerplate.containers.Payroll.Employee.personal.eRPCode":"Book No",
+  "boilerplate.containers.Payroll.Employee.personal.machineCode":"Ref.No",
+  "boilerplate.containers.Payroll.Employee.personal.arname":"Arabic Name",
+  "boilerplate.containers.Payroll.Employee.personal.enname":"English Name",
+  "boilerplate.containers.Payroll.Employee.personal.identityType":"Card Type",
+  "boilerplate.containers.Payroll.Employee.personal.identityIssuingAuth":"ID Card Issuing Auth",
+  "boilerplate.containers.Payroll.Employee.personal.identityIssuingDate":"ID Card Issuing Date",
+  "boilerplate.containers.Payroll.Employee.personal.identityExpiry":"ID Card Expiry",
+
+  "boilerplate.containers.Payroll.Employee.personal.gender":"Gender",
+  "boilerplate.containers.Payroll.Employee.personal.nationality":"Nationality",
+  "boilerplate.containers.Payroll.Employee.personal.religion":"Religion",
+  "boilerplate.containers.Payroll.Employee.personal.motherName":"Mother Name",
+  "boilerplate.containers.Payroll.Employee.personal.birthDate":"Birth Date",
+  "boilerplate.containers.Payroll.Employee.personal.gov":"Governorate",
+  "boilerplate.containers.Payroll.Employee.personal.city":" City",
+  "boilerplate.containers.Payroll.Employee.personal.socialStatus":"Social Status",
+
+  "boilerplate.containers.Payroll.Employee.personal.militaryStatus":"Military Status",
+  "boilerplate.containers.Payroll.Employee.personal.sonNo":"Son No",
+
+  "boilerplate.containers.Payroll.Employee.personal.isResident":"Is Resident",
+  "boilerplate.containers.Payroll.Employee.personal.isSpecialNeeds":"Is SpecialNeeds",
+  "boilerplate.containers.Payroll.Employee.personal.upload":"upload",
+  "boilerplate.containers.Payroll.Employee.personal.controlParameter":"Roles Template",
+ 
+
   "boilerplate.containers.Payroll.Employee.car.carModel":"Car Model",
   "boilerplate.containers.Payroll.Employee.car.manufactureYear":"Manufacture Year",
   "boilerplate.containers.Payroll.Employee.car.hasLicense":"Has License",
