--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1221,7 +1221,28 @@
   "boilerplate.containers.Payroll.vac.code.OpenBalance": "Open balance",
   "boilerplate.containers.Payroll.vac.code.Balance": "Balance",
   "boilerplate.containers.Payroll.vac.code.PostedBalance": "Posted balance",
-  "boilerplate.containers.Payroll.vac.code.UpdateCurrentBalance": "Update current balance"
+  "boilerplate.containers.Payroll.vac.code.UpdateCurrentBalance": "Update current balance",
+
+  "boilerplate.containers.Payroll.vac.code.EmpVacBalRepMoney_ErrorBalanceMsg": "Error.. Replaced Balance is greater than current balance",
+  "boilerplate.containers.Payroll.vac.code.EmpVacBalRepMoney_ErrorOpenMonthMsg": "This month is closed",
+  "boilerplate.containers.Payroll.vac.code.VacMonthOpenClose_ErrorYearAlreadyOpen": "Year Already Opened",
+  "boilerplate.containers.Payroll.vac.code.VacMonthOpenClose_ErrorPreviousyearnotclosed": "Previous year was not closed ...cannot open new year",
+  "boilerplate.containers.Payroll.vac.code.TrxSerial": "Trx Serial",
+  "boilerplate.containers.Payroll.vac.code.EmployeeName": "Employee Name",
+  "boilerplate.containers.Payroll.vac.code.Template": "Template",
+  "boilerplate.containers.Payroll.vac.code.Element": "Element",
+  "boilerplate.containers.Payroll.vac.code.year": "Year",
+  "boilerplate.containers.Payroll.vac.code.Month": "Month",
+  "boilerplate.containers.Payroll.vac.code.BalanceToReplace": "Balance To Replace",
+  "boilerplate.containers.Payroll.vac.code.ReplaceAnnualLeaveBalance": "Replace Annual Leave Balance",
+  "boilerplate.containers.Payroll.vac.code.EditReplaceAnnualLeaveBalance": "Edit Replace Annual Leave Balance",
+  "boilerplate.containers.Payroll.vac.code.CreateReplaceAnnualLeaveBalance": "Create Replace Annual Leave Balance",
+  "boilerplate.containers.Payroll.vac.code.Job": "Job",
+  "boilerplate.containers.Payroll.vac.code.Department": "Department",
+  "boilerplate.containers.Payroll.vac.code.hiringDate": "Hiring date",
+  "boilerplate.containers.Payroll.vac.code.CurrentBalance": "Current balance",
+  "boilerplate.containers.Payroll.vac.code.caluValue": "Calu Value",
+  "boilerplate.containers.Payroll.vac.code.Value": "Value"
    
    
 }
