--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -891,6 +891,11 @@
   "boilerplate.containers.Payroll.lastDate":"Last Date",
   "boilerplate.containers.Payroll.oldElemVal":"Prev Value",     
   "boilerplate.containers.Payroll.workingYears":"Working Years", 
+  "boilerplate.containers.Payroll.step":"Step",
+  "boilerplate.containers.Payroll.status":"Status",
+  "boilerplate.containers.Payroll.approvedEmp":"Decision Maker",
+  "boilerplate.containers.Payroll.edit":"Edit",  
+  "boilerplate.containers.Payroll.addNew":"Add",
   
   
   
