refactor vacation translation to pe specific instead of global

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -887,16 +887,7 @@
   "boilerplate.containers.Payroll.employeeName": "اسم الموظف",
   "boilerplate.containers.Payroll.vacationType": "نوع الاجازة",
   "boilerplate.containers.Payroll.department": "الادارة",
-  "boilerplate.containers.Payroll.organization": "الادارة",
-  "boilerplate.containers.Payroll.registrationDate": "تاريخ التسجيل",
-  "boilerplate.containers.Payroll.employeeId": "كود الموظف",
-  "boilerplate.containers.Payroll.daysCount": "عدد الايام",
-  "boilerplate.containers.Payroll.dayDeducedBy": "اليوم يخصم ب",
-  "boilerplate.containers.Payroll.vacationCode": "كود الاجازة",
-  "boilerplate.containers.Payroll.vacationName": "نوع الاجازة",
   "boilerplate.containers.Payroll.job": "الوظيفة",
-  "boilerplate.containers.Payroll.filterOnRegistrationHistory": "تصفية علي تاريخ التسجيل",
-  "boilerplate.containers.Payroll.appointmentDate": "تاريخ التعيين",
   "boilerplate.containers.Payroll.hiringDate": "تاريخ التعيين",
   "boilerplate.containers.Payroll.arName": "الاسم بالعربية",
   "boilerplate.containers.Payroll.enName": "الاسم بالانجليزية",
@@ -1221,6 +1212,19 @@
   "boilerplate.containers.Payroll.vac.code.AnnualInAdvance": "سنوى مقدم",
   "boilerplate.containers.Payroll.vac.code.MustAttachFile": "يلزم ارفاق ملف",
 
+  "boilerplate.containers.Payroll.vac.organization": "الادارة",
+  "boilerplate.containers.Payroll.vac.registrationDate": "تاريخ التسجيل",
+  "boilerplate.containers.Payroll.vac.dayDeducedBy": "اليوم يخصم ب",
+  "boilerplate.containers.Payroll.vac.vacationCode": "كود الاجازة",
+  "boilerplate.containers.Payroll.vac.vacationName": "نوع الاجازة",
+  "boilerplate.containers.Payroll.vac.filterOnRegistrationHistory": "تصفية علي تاريخ التسجيل",
+  "boilerplate.containers.Payroll.vac.appointmentDate": "تاريخ التعيين",
+  "boilerplate.containers.Payroll.vac.fromdate": "من تاريخ",
+  "boilerplate.containers.Payroll.vac.todate": "الى تاريخ",
+  "boilerplate.containers.Payroll.vac.employeeId": "كود الموظف",
+  "boilerplate.containers.Payroll.vac.daysCount": "عدد الايام",
+  "boilerplate.containers.Payroll.vac.employeeName": "اسم الموظف",
+
   "boilerplate.containers.Payroll.vac.code.GovernmentSickLeaveSetting": "اعدادات الاجازة المرضى الحكومى",
   "boilerplate.containers.Payroll.vac.code.VacationType": "نوع الإجازة",
   "boilerplate.containers.Payroll.vac.code.Yearly": "سنويا",
@@ -1229,7 +1233,6 @@
   "boilerplate.containers.Payroll.vac.code.CountValueDay": "العدد/القيمة(من اليوم)",
   "boilerplate.containers.Payroll.vac.code.EmployeeDeduction": "خصم الموظف",
   "boilerplate.containers.Payroll.vac.code.LeavesOpenBalanceTitle": "ارصدة الاجازات الافتتاحية",
-  "boilerplate.containers.Payroll.vac.code.EmployeeName": "اسم الموظف",
   "boilerplate.containers.Payroll.vac.code.LeaveType": "نوع الإجازة",
   "boilerplate.containers.Payroll.vac.code.usedLeaves": "الاجازات المستهلكة",
   "boilerplate.containers.Payroll.vac.code.OpenBalance": " الرصيد الإفتتاحى",
