--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -867,19 +867,6 @@
   "boilerplate.containers.Payroll.isStop": "Is Stop",
   "boilerplate.containers.Payroll.chooseJob": "Select Job",
   "boilerplate.containers.Payroll.total": "Total",
-  "boilerplate.containers.Payroll.employeeName": "Employee Name",
-  "boilerplate.containers.Payroll.department": "Department",
-  "boilerplate.containers.Payroll.registrationDate": "Registration Date",
-  "boilerplate.containers.Payroll.vacationCode": "Vacation Code",
-  "boilerplate.containers.Payroll.vacationName": "Vacation Name",
-  "boilerplate.containers.Payroll.appointmentDate": "Appointment Date",
-  "boilerplate.containers.Payroll.daysCount": "Days Count",
-  "boilerplate.containers.Payroll.dayDeducedBy": "Day is deducted by",
-  "boilerplate.containers.Payroll.employeeId": "Employee Code",
-  "boilerplate.containers.Payroll.vacationType": "Vacation Type",
-  "boilerplate.containers.Payroll.organization": "Organization",
-  "boilerplate.containers.Payroll.job": "Job",
-  "boilerplate.containers.Payroll.filterOnRegistrationHistory": "Filter on registration history",
   "boilerplate.containers.Payroll.hiringDate": "Hiring Date",
   "boilerplate.containers.Payroll.arName": "Arabic Name",
   "boilerplate.containers.Payroll.enName": "English Name",
@@ -1166,6 +1153,23 @@
   "boilerplate.containers.Payroll.Request.Transaction.AccessToTimeInOUT": "Access To Time In/OUT",
   "boilerplate.containers.Payroll.Request.Transaction.checkIn": "No check In",
   "boilerplate.containers.Payroll.Request.Transaction.checkOut": "No Check Out",
+
+  "boilerplate.containers.Payroll.vac.employeeName": "Employee Name",
+  "boilerplate.containers.Payroll.vac.department": "Department",
+  "boilerplate.containers.Payroll.vac.registrationDate": "Registration Date",
+  "boilerplate.containers.Payroll.vac.vacationCode": "Vacation Code",
+  "boilerplate.containers.Payroll.vac.vacationName": "Vacation Name",
+  "boilerplate.containers.Payroll.vac.appointmentDate": "Appointment Date",
+  "boilerplate.containers.Payroll.vac.daysCount": "Days Count",
+  "boilerplate.containers.Payroll.vac.dayDeducedBy": "Day is deducted by",
+  "boilerplate.containers.Payroll.vac.employeeId": "Employee Code",
+  "boilerplate.containers.Payroll.vac.vacationType": "Vacation Type",
+  "boilerplate.containers.Payroll.vac.organization": "Organization",
+  "boilerplate.containers.Payroll.vac.job": "Job",
+  "boilerplate.containers.Payroll.vac.filterOnRegistrationHistory": "Filter on registration history",
+  "boilerplate.containers.Payroll.vac.search": "Search",
+  "boilerplate.containers.Payroll.vac.fromdate": "From Date",
+  "boilerplate.containers.Payroll.vac.todate": "To Date",
 
   "boilerplate.containers.Payroll.vac.code.date": "Date",
   "boilerplate.containers.Payroll.vac.code.actions": "Actions",
